<resources>
    <string name="app_name">Imei Scanner</string>
    <string name="register_text_mobileApp">Mobile App</string>
    <string name="register_text_phoneNumber">Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="register_btn_sign_text">Sign In</string>
    <string name="register_or_text">or</string>
    <string name="register_enterPhoneNumber_text">Enter Phone Number!</string>
    <string name="entercode_enterphone_text">Enter code</string>
    <string name="enter_code_toast_text">Please enter phone number!</string>
    <string name="input_code">Input code</string>
    <string name="register_input_name">Input Name</string>
    <string name="register_enter_name">Enter Name</string>
    <string name="fullname_is_empty">Fullname is empty!</string>
    <string name="settings_account_text">Account</string>
    <string name="settings_log_out_text">Log Out</string>
    <string name="cancelled_from_barcode">Cancelled</string>
    <string name="Username_is_empty_toast">Username is empty</string>
    <string name="username_text">Fullname</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_dialog">Delete Account!</string>
    <string name="alert_dialog_message">Are you sure? Your profile and related account information will be deleted from our program.</string>
    <string name="cancel">Cancel</string>
    <string name="delete_text">Delete</string>
    <string name="log_out_dialog_text">Log Out!</string>
    <string name="log_out_dialog_message">Are you sure You want to log out?</string>
    <string name="log_out_text">Log out</string>
    <string name="image_changed">Image Changed!</string>
    <string name="setttings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="search">Search</string>
    <string name="favourites_added">Added</string>
    <string name="favourites_deleted_toast">Deleted</string>
    <string name="scan_code_menu_item">Scan code</string>
    <string name="sort_text">Sort</string>
    <string name="filter_text">Filter</string>
    <string name="oldest_first_text">Oldest First</string>
    <string name="newest_first_text">Newest First</string>
    <string name="didn_t_recive_sms_text">Didn\'t recive SMS?</string>
    <string name="resend_code_text">Resend Code</string>
    <string name="language_text">Language</string>
    <string name="choice_language_text">Select the language</string>
    <string name="ok_text">OK</string>
    <string name="home_text">Home</string>
    <string name="favourites_text">Favourites</string>
    <string name="about_text">About</string>
    <string name="phone_name_text">Phone name</string>
    <string name="serial_number_text">Serial number</string>
    <string name="imei1_text">Imei 1</string>
    <string name="imei2_text">Imei 2</string>
    <string name="memory_text">Memory</string>
    <string name="added_date_text">Added date</string>
    <string name="price_text">Price</string>
    <string name="battery_state_text">Battery state</string>
    <string name="edit_text">Edit</string>
    <string name="_26_09_2022_text">26/09/2022</string>
    <string name="save_text">Save</string>
    <string name="add_photo">Add Photo</string>
    <string name="scan_a_barcode_text">Scan a barcode</string>
    <string name="please_input_imei_1">Please input Imei 1</string>
    <string name="dd_mm_yy_text">dd/MM/yyyy</string>
    <string name="name_changed_text">Name Changed!</string>
    <string name="account_deleted">Account Deleted</string>
    <string name="imei_already_exists_text">Imei already exists</string>
    <string name="select_all_text">Select All</string>
    <string name="unselect_all_text">Unselect All</string>

    <plurals name="count_items" translatable="false">
        <item quantity="other">%d</item>
    </plurals>
    <string name="done">Done!</string>
    <string name="verification_code">Verification code</string>
    <string name="please_enter_the_6_digit_code_sent_to_you">Please enter the 6-digit code sent to you</string>
    <string name="if_you_don_t_receive_the_code_tap_below" translatable="false">If you don\'t receive the code in</string>
    <string name="name">Name</string>
    <string name="surname">Surname(optional)</string>
    <string name="delete_data">Delete Data!</string>
    <string name="delete_item_message">Are you sure? This information will be deleted</string>
    <string name="your_name">Your name</string>
    <string name="_60">60</string>
    <string name="what_is_your_phone_number">What is your phone number?</string>
    <string name="label">label</string>
    <string name="send_code_txt">Send Code</string>
    <string name="seconds">seconds</string>
    <string name="continue_text">Continue</string>
    <string name="at">at</string>
    <string name="email">Email</string>
    <string name="english">English</string>
    <string name="phone_number_empty">The Phone Number is Empty</string>
    <string name="tap_bellow_to_resend_it" translatable="false">tap bellow to resend it</string>
    <string name="enter_your_fullname">Enter your fullname</string>
    <string name="at_905519920410">at +905519920410</string>
    <string name="you_don_t_have_set_any_phone_data_create_one_in_seconds">You don’t have set any phone data.Create one in seconds.</string>
    <string name="edit_phone_frg">Edit Phone Information</string>
    <string name="phone_information">Phone Information</string>
    <string name="add_phone_information">Add Phone Information</string>


    <string name="if_you_don_t_receive_uz" translatable="false">Agar siz</string>
    <string name="tap_bellow_to_resend_it_uz" translatable="false">ichida kodni olmasangiz uni qayta
        yuborish uchun pastdagi tugmani bosing</string>
    <string name="select_picture">Select Picture</string>
    <string name="limit_pick_picture_text">Not allowed to pick more than 8 Pictures!</string>
    <string name="close">Close</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose">Choose</string>
    <string name="deleting">Deleting…</string>
    <string name="loading">Loading…</string>

</resources>