<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_scanner_btn"
        android:icon="@drawable/ic_qr_code_scanner"
        android:title="@string/scan_code_menu_item"
        app:actionViewClass="android.widget.ImageView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_search_btn"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/menu_sort_btn"
        android:icon="@drawable/ic_sort"
        android:title=""
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_first_oldest"
                    android:title="@string/oldest_first_text"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/menu_first_newest"
                    android:title="@string/newest_first_text"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
</menu>