<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.add_phone.PhoneInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_name"
            style="@style/card_style"
            android:background="@drawable/stroke_cardview"
            app:cardCornerRadius="@dimen/_11sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/phone_info_info_tv_style"
                    android:text="@string/phone_name_text" />

                <TextView
                    android:id="@+id/tv_phone_name"
                    style="@style/phone_info_tv_style"
                    android:text="@string/name" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_imei1"
            style="@style/card_style"
            android:layout_marginTop="12dp"
            android:background="@drawable/stroke_cardview"
            app:cardCornerRadius="@dimen/_11sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_name">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/phone_info_info_tv_style"
                    android:text="@string/imei1_text" />

                <TextView
                    android:id="@+id/tv_phone_imei1"
                    style="@style/phone_info_tv_style"
                    android:text="@string/name" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_imei2"
            style="@style/card_style"
            app:cardCornerRadius="@dimen/_11sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_imei1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/phone_info_info_tv_style"
                    android:text="@string/imei2_text" />

                <TextView
                    android:id="@+id/tv_phone_imei2"
                    style="@style/phone_info_tv_style"
                    android:text="@string/name" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_serial_number"
            style="@style/card_style"

            app:cardCornerRadius="@dimen/_11sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_imei2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/phone_info_info_tv_style"
                    android:text="@string/serial_number_text" />

                <TextView
                    android:id="@+id/tv_phone_serial"
                    style="@style/phone_info_tv_style"
                    android:text="@string/name" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_price"
            style="@style/mini_card_style"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_11sdp"
            app:layout_constraintEnd_toStartOf="@+id/card_state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_serial_number">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/phone_info_info_tv_style"
                    android:text="@string/memory_text" />

                <TextView
                    android:id="@+id/tv_phone_memory"
                    style="@style/phone_info_tv_style"
                    android:text="@string/name" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_state"
            style="@style/mini_card_style"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_15sdp"

            app:cardCornerRadius="@dimen/_11sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_price"
            app:layout_constraintTop_toBottomOf="@+id/card_serial_number">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/phone_info_info_tv_style"
                    android:text="@string/battery_state_text" />

                <TextView
                    android:id="@+id/tv_phone_state"
                    style="@style/phone_info_tv_style"
                    android:text="@string/name" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <!--               dksjfgbdjbn                   -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_memory"
            style="@style/mini_card_style"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_11sdp"
            app:layout_constraintEnd_toStartOf="@+id/card_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_price">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/phone_info_info_tv_style"
                    android:text="@string/price_text" />

                <TextView
                    android:id="@+id/tv_phone_price"
                    style="@style/phone_info_tv_style"
                    android:text="@string/name" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_date"
            style="@style/mini_card_style"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_15sdp"

            app:cardCornerRadius="@dimen/_11sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_memory"
            app:layout_constraintTop_toBottomOf="@+id/card_state">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/phone_info_info_tv_style"
                    android:text="@string/dd_mm_yy_text" />

                <TextView
                    android:id="@+id/tv_phone_date"
                    style="@style/phone_info_tv_style"
                    android:text="@string/name" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/karla_bold"
        android:gravity="center"
        android:text="@string/edit_text"
        android:textColor="@color/white"
        android:textSize="@dimen/_22sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>