<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.settings.SettingsFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="412dp"
        android:layout_height="79dp"
        app:layout_constraintBottom_toTopOf="@id/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:id="@+id/profile_image"
        android:layout_height="100dp"
        android:src="@drawable/google"
        android:layout_marginTop="@dimen/top_margin_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <androidx.cardview.widget.CardView
        style="@style/card_style"
        android:id="@+id/card_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/phone_info_info_tv_style"
                android:text="@string/your_name" />

            <TextView
                android:id="@+id/tv_settings_name"
                style="@style/phone_info_tv_style"
                android:text="@string/name" />


        </LinearLayout>



            <ImageView
                android:layout_margin="@dimen/margin_10_dp"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/edit_pen"/>



    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        style="@style/card_style"
        android:id="@+id/card_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_name">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/email_or_phone_text"
                style="@style/phone_info_info_tv_style"
                android:text="@string/email" />
            <TextView
                android:id="@+id/tv_settings_email"
                style="@style/phone_info_tv_style"
                android:text="@string/name" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>




    <androidx.cardview.widget.CardView
        style="@style/card_style"
        android:id="@+id/card_lang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_email">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                style="@style/phone_info_info_tv_style"
                android:text="@string/language_text" />

            <TextView
                android:id="@+id/tv_settings_lang"
                style="@style/phone_info_tv_style"
                android:text="@string/name" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_delete_account"
        style="@style/card_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_lang">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_settings_delete_account"
                style="@style/phone_info_tv_style"
                android:textColor="#FF4E35"
                android:text="@string/delete_account" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textView6"
        style="@style/mid_text_style"
        android:layout_marginBottom="@dimen/margin_10_dp"
        android:background="@drawable/button_shape_red"
        android:gravity="center"
        android:text="Log out"
        android:textSize="@dimen/top_margin_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>