<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_register"
    android:orientation="vertical">

    <TextView
        android:id="@+id/register_text_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/karla_regular"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_text_what_is_your_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_text_what_is_your_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/karla_regular"
        android:text="@string/what_is_your_phone_number"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:layout_marginBottom="@dimen/margin_10_dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_input_phone_container"
        app:layout_constraintEnd_toEndOf="@+id/register_input_phone_container"
        app:layout_constraintStart_toStartOf="@+id/register_input_phone_container" />

    <androidx.cardview.widget.CardView
        android:id="@+id/register_input_phone_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/margin_10_dp"
        app:cardCornerRadius="@dimen/top_margin_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_text_appName"
        app:layout_constraintStart_toStartOf="@+id/register_text_appName"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <com.hbb20.CountryCodePicker
                android:id="@+id/textView_countryName"
                android:layout_width="wrap_content"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccpDialog_allowSearch="false"
                app:ccp_showNameCode="false"

                android:layout_height="match_parent"/>

            <EditText
                android:id="@+id/register_input_phone_number"
                android:layout_height="40dp"
                android:layout_width="180dp"
                android:gravity="center"
                android:background="@color/white"
                android:inputType="phone|textNoSuggestions"
                android:hint="@string/register_text_phoneNumber" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/register_btn_sign_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="@+id/register_input_phone_container"
        app:layout_constraintStart_toStartOf="@+id/register_input_phone_container"
        app:layout_constraintTop_toBottomOf="@+id/register_input_phone_container">

        <TextView
            android:id="@+id/register_btn_sign"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/karla_bold"
            android:gravity="center"
            android:text="@string/register_btn_sign_text"
            android:textColor="#000000"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_input_phone_container" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/or_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_or_text"
        app:layout_constraintBottom_toTopOf="@+id/register_btn_google_container"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/register_btn_sign_container"
        app:layout_constraintStart_toStartOf="@+id/register_btn_sign_container"
        app:layout_constraintTop_toBottomOf="@+id/register_btn_sign_container" />

    <androidx.cardview.widget.CardView
        android:id="@+id/register_btn_google_container"
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:cardCornerRadius="25dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/or_text"
        app:layout_constraintStart_toStartOf="@+id/or_text"
        app:layout_constraintTop_toBottomOf="@+id/or_text">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <ImageView
               android:src="@drawable/google"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>

           <TextView
               android:id="@+id/register_btn_google"
               android:layout_width="80dp"
               android:layout_height="match_parent"
               android:fontFamily="@font/karla_bold"
               android:gravity="center"
               android:text="@string/google"
               android:textColor="@color/black"
               android:textSize="22sp" />
       </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>